--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
     repository: 'embeddedbaseimage'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
-    tags: 'embeddedbaseimage'
+    tags: 'v$(Build.BuildId)'
